style: Drop inline style to avoid bug on Firefox.
html/body height gets broken :/

--- a/style/theme.css
+++ b/style/theme.css
@@ -36,12 +36,11 @@
 	}
 }
 
-/* Override first-paint inline style */
 html,
 body {
-	width: 100% !important;
-	height: 100% !important;
-	margin: 0 !important;
+	width: 100%;
+	height: 100%;
+	margin:;
 }
 
 /* Body background */
